starter-kit/k8s/06-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: homework
spec:
  selector:
    app: backend

  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: homework

spec:
  replicas: 3

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
        network-role: app

    spec:
      serviceAccountName: backend-sa

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001

        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: backend
          image: backend:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 250m
              memory: 256Mi

          securityContext:
            allowPrivilegeEscalation: false

            capabilities:
              drop:
                - ALL

          startupProbe:
            httpGet:
              path: /healthz
              port: 8080

            periodSeconds: 3
            failureThreshold: 20

          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080

            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080

            periodSeconds: 10
            failureThreshold: 3
