starter-kit/k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework
  namespace: homework

spec:
  ingressClassName: nginx

  rules:
    - host: kube-lab.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend

                port:
                  number: 8080
